resources/css/utilities/utilities.css
/* GROUP UTILITIES / FRAMEWORK
=================================================== */
@layer utilities {
    .qa-test {
        border: 3px solid red!important;
    }
    /* Images without alt tags. Turn on when needed */
    /* img:not([alt]) {
        border: 5px dashed red;
    } */
    /* Components > Framework > Nav */
    .no-js .u-js-only {
        display: none!important;
    }
    /* Text meant only for screen readers. */
    /* Components > Framework > Nav */
    .u-screen-reader-text {
        clip: rect(1px, 1px, 1px, 1px);

        position: absolute!important;
        overflow: hidden;
        width: 1px;
        height: 1px;
        /* Needed if the text should be visible on keyboard focus */
        &:focus {
            clip: auto!important;

            z-index: 100000; /* Above WP toolbar. */
            display: block;
            top: 0;
            left: 0;

            width: auto;
            height: auto;
        }
    }
    /* Custom */
    @media (width < 700px) {
        /* e.g. Sponsors on homepage */
        .u-center-on-lower-mqs {
            text-align: center;
            justify-content: center;
        }
    }
    .u-w-full {
        width: 100%;
    }
    /* This is used to restrict the width of some screenshots, e.g. fieldtypes like /fieldtypes/assets */
    .s-restrict-width-of-main-imgs main figure img {
        max-width: 35rem;
    }
    .u-image-boost-with-hue-rotate {
        filter: var(--filter-image-boost-1-with-hue-rotate);
    }
    .u-image-boost-with-hue-rotate-extra {
        filter: var(--filter-image-boost-1-with-hue-rotate-extra);
    }
    .u-link-style-none {
        &, * {
            text-decoration: none;
            color: inherit;
            border-bottom: 0;
        }
    }
    /* GROUP UTILITIES / FRAMEWORK / (NON CORE) / LINE CLAMP
    =================================================== */
    /* e.g. <div class="u-line-clamp" style="--clamp: 3;"> */
    .u-line-clamp {
        display: -webkit-box;
        -webkit-box-orient: vertical;
        overflow: hidden;
        /* Stop padding ruining the clamp */
        padding-block-end: 0;
        -webkit-line-clamp: var(--clamp, 2);
    }
    .u-disable-animation * {
        animation: unset;
        transition: unset;
    }
}

